--- a/package.json
+++ b/package.json
@@ -2,9 +2,15 @@
   "name": "tennis-dius",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/index.js",
+    "build": "tsc && node dist/index.js",
+    "lint": "eslint src --color",
+    "prettier": "prettier --write 'src/**/*.js'",
+    "prettier:write": "onchange 'src/**/*.js' -- prettier --write {{changed}}",
+    "test": "jest --watchAll",
+    "coverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
